<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pigGameLL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/defaultPadding"
    tools:context=".MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/showScoresLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/displaySelfScoreTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/smallerSpacing"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/defaultPadding"
            android:text="@string/displaySelfScore"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/displayCompScoreTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/smallerSpacing"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/defaultPadding"
            android:text="@string/displayCompScore"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textForScoresLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selfScoreTellTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/smallerSpacing"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/defaultPadding"
            android:text="@string/selfScoreLabel"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/compScoreTellTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/smallerSpacing"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/defaultPadding"
            android:text="@string/computerScoreLabel"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imagesForDiceLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dieOneIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="@dimen/defaultPadding"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/dieTwoIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:padding="@dimen/defaultPadding"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <TextView
        android:id="@+id/displayTroughTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallerSpacing"
        android:gravity="center_vertical|center"
        android:text="@string/displayTrough"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/troughTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallerSpacing"
        android:gravity="center_vertical|center"
        android:text="@string/troughLabel"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <LinearLayout
        android:id="@+id/buttonsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rollAgainButton"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/defaultPadding"
            android:text="@string/rollAgain" />

        <Button
            android:id="@+id/holdButton"
            android:layout_width="@dimen/zero"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/defaultPadding"
            android:text="@string/buttonHold" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultsOfTurnTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallerSpacing"
        android:gravity="center"
        android:text="@string/resultsOfTurnFix"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="@dimen/resultsSize" />

</LinearLayout>